--- a/f2/css/common.css
+++ b/f2/css/common.css
@@ -199,7 +199,7 @@ header .logo {
 }
 
 .dropDown .dd {
-  display: none;
+  /* display: none; */
   width: 210px;
   height: 465px;
   background-color: #c81623;
