--- a/pagination_with_js/index.css
+++ b/pagination_with_js/index.css
@@ -83,9 +83,11 @@ body {
   color: #fff;
   background-color: #646b8a;
 }
+.container .pagination li.btn {
+  cursor: pointer;
+}
 .container .pagination li.page-number {
   color: #646b8a;
-  cursor: pointer;
 }
 .container .pagination li.page-number:hover {
   color: #fff;
