--- a/pagination_with_js/index.less
+++ b/pagination_with_js/index.less
@@ -100,10 +100,13 @@ body {
           }
         }
       }
+      &.btn{
+        cursor: pointer;
+
+      }
 
       &.page-number {
-        color: @darkColor;
-        cursor: pointer;
+        color: @darkColor; 
 
         &:hover {
           color: #fff;
